RESOLVED FIXED56298
Spinbuttons become unclickable if right padding is large.
https://bugs.webkit.org/show_bug.cgi?id=56298
Summary Spinbuttons become unclickable if right padding is large.
Kent Tamura
Reported 2011-03-14 02:15:53 PDT
http://code.google.com/p/chromium/issues/detail?id=75933 This bug is reproducible only on non-Mac, that is to say, inner-spin-button.
Attachments
Patch (25.74 KB, patch)
2011-03-14 02:45 PDT, Kent Tamura
dglazkov: review+
Kent Tamura
Comment 1 2011-03-14 02:45:19 PDT
Satish Sampath
Comment 2 2011-03-14 03:26:18 PDT
The patch looks good to me, though I can't r+ it as I am not a reviewer.
Adam Barth
Comment 3 2011-03-15 02:23:22 PDT
Comment on attachment 85661 [details] Patch I wanted to review this patch, but I don't review patches to the "rendering" directory. :(
Kent Tamura
Comment 4 2011-04-05 18:36:19 PDT
Ping. Could someone do r+ please?
Dimitri Glazkov (Google)
Comment 5 2011-04-05 19:10:15 PDT
Comment on attachment 85661 [details] Patch ok.
Kent Tamura
Comment 6 2011-04-07 00:05:20 PDT
Landed: http://trac.webkit.org/changeset/83145 I'll handle rebaseline.
WebKit Review Bot
Comment 7 2011-04-07 01:02:32 PDT
http://trac.webkit.org/changeset/83145 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.