Source/WebCore/rendering/RenderTextControlSingleLine.cpp
@@ -420,10 +420,6 @@ void RenderTextControlSingleLine::forwardEvent(Event* event)
         m_resultsButton->defaultEventHandler(event);
     else if (m_cancelButton && localPoint.x() > textRight)
         m_cancelButton->defaultEventHandler(event);
-    else if (m_innerSpinButton && localPoint.x() > textRight && m_innerSpinButton->renderBox() && localPoint.x() < textRight + m_innerSpinButton->renderBox()->width())
-        m_innerSpinButton->defaultEventHandler(event);
-    else if (m_outerSpinButton && localPoint.x() > textRight)
-        m_outerSpinButton->defaultEventHandler(event);
     else
         RenderTextControl::forwardEvent(event);
 }
